src/objects/Apttus_Base2__UIComponentConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ApplicationName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentConfigId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Component Config Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Config</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderClassName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderPackageName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__TemplateName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Template</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>